cargo-features = ["edition"]

[package]
name = "absentis"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = '2018'

[dependencies]
wu-diff = "0.1.0"
tokio = "0.1.7"
hyper = "*"
hyper-tls = "*"
serde = "1.0.70"
# serde_json = "1.0.24"
serde_derive = "1.0.70"
failure = "0.1.1"
toml = "0.4"
http = "0.1"
dirs = "1.0.2"
log = { version = "0.4.3", features = ["std", "serde"] }
env_logger = "0.5.11"
#for tests
regex = "*"
bytes = "*"
futures = "0.1.23"
colored = "1.6.1"
hex = "0.3.2"
enum-primitive-derive = "0.1.2"
num-traits = "*"

[dependencies.serde_json]
version = "1.0.24"
features = ["preserve_order"]

[dependencies.ethereum-types]
version = "0.3.2"
features = ["serialize"]
